# tiny-colab

./: .gitignore  .pre-commit-config.yaml
duckduckgo/: demo.ipynb
google_langextract/: main.py  output.html  output.jsonl  pyproject.toml
mailgun/: demo.py
markitdown/: ms_markitdown.ipynb  test_docx.docx
mlflow3/: .gitignore  agent.py  main.py  pyproject.toml
petri/: .gitignore  main.py  pyproject.toml  whistleblowing_ablations.py
petri/outputs/: transcript_2025-10-29_11-10-54_1.json
quarkus-demo-architecture-rules/: README.md
quarkus-demo-architecture-rules/src/main/docker/: Dockerfile.jvm  Dockerfile.legacy-jar  Dockerfile.native-micro
quarkus-demo-architecture-rules/src/main/java/com/hsiangjenli/: ManyParameters.java
quarkus-demo-architecture-rules/src/test/java/com/hsiangjenli/: ArchitectureTest.java
quarkus-demo-archtecture-rules/: README.md  pom.xml
quarkus-demo-archtecture-rules/src/main/docker/: Dockerfile.native
quarkus-demo-archtecture-rules/src/main/java/com/hsiangjenli/: GreetingResource.java
quarkus-demo-archtecture-rules/src/test/java/com/hsiangjenli/: ArchitectureTest.java  GreetingResourceIT.java  GreetingResourceTest.java
reader-lm/: original.md  output.md  pseudo.html  pseudo_output.md  test.html  test.py
test-kafka/: consumer.py  docker-compose.yaml  main.py  producer.py  pyproject.toml
test-kafka/src/test_kafka/: __init__.py
test-kafka/src/test_kafka/topics/embedding_utils/: Embedding.py  OllamaEmbedding.py
